[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consul-adk-demo"
version = "0.1.0"
description = "consul-adk-demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "consul-adk>=0.0.3",
]

[tool.setuptools.packages.find]
include = ["agents*", "mcps*", "app*"]

